fixed <ul> overflow for mega menus in mixins

--- a/scss_styles/scss/_mixins.scss
+++ b/scss_styles/scss/_mixins.scss
@@ -32,6 +32,7 @@
         position: static;
         top: 100%;
         left: 0;
+        max-width: 100%;
         -moz-column-count: 1;
         -moz-column-gap: 0;
         -webkit-column-count: 1;
